# UnixNotis

./: .gitignore  Cargo.toml  README.md
crates/noticenterctl/: Cargo.toml
crates/noticenterctl/src/: main.rs
crates/unixnotis-center/: Cargo.toml
crates/unixnotis-center/src/: css.rs  dbus.rs  debug.rs  main.rs
crates/unixnotis-center/src/media/: media_bus.rs  media_cache.rs  media_metadata.rs  media_schedule.rs  mod.rs
crates/unixnotis-center/src/ui/: hyprland.rs  list.rs  list_item.rs  list_widgets.rs  marquee.rs  media_widget.rs  mod.rs  panel.rs
crates/unixnotis-center/src/ui/icons/: icons_cache.rs  icons_decode.rs  icons_sources.rs  mod.rs
crates/unixnotis-center/src/ui/list/: list_blocks.rs  list_grouping.rs  list_item.rs  list_widgets.rs  mod.rs
crates/unixnotis-center/src/ui/widgets/: brightness.rs  cards.rs  command_utils.rs  mod.rs  stats.rs  stats_builtin.rs  toggles.rs  util.rs  volume.rs  watch_utils.rs
crates/unixnotis-core/: Cargo.toml
crates/unixnotis-core/assets/: base.css  panel.css  popup.css  widgets.css
crates/unixnotis-core/src/: control.rs  lib.rs  model.rs  theme.rs  util.rs
crates/unixnotis-core/src/config/: config_io.rs  config_runtime.rs  config_types.rs  mod.rs
crates/unixnotis-daemon/: Cargo.toml
crates/unixnotis-daemon/src/: child_process.rs  daemon.rs  dbus_owner.rs  expire.rs  main.rs  runtime_config.rs  shutdown_signal.rs  sound.rs  store.rs  trial_mode.rs
crates/unixnotis-installer/: Cargo.toml
crates/unixnotis-installer/src/: actions.rs  actions_config.rs  actions_daemon.rs  actions_format.rs  actions_install.rs  actions_plan.rs  actions_process.rs  actions_state.rs  actions_verify.rs  app.rs  checks.rs  detect.rs  events.rs  main.rs  model.rs  paths.rs  terminal.rs  ui.rs
crates/unixnotis-popups/: Cargo.toml
crates/unixnotis-popups/src/: css.rs  dbus.rs  main.rs  ui.rs  ui_window.rs
crates/unixnotis-popups/src/icons/: mod.rs
crates/unixnotis-ui/: Cargo.toml
crates/unixnotis-ui/src/: css.rs  lib.rs
scripts/: install.sh
