[package]
name = "unixnotis-center"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-channel.workspace = true
clap.workspace = true
crossbeam-channel.workspace = true
futures-util.workspace = true
gio.workspace = true
glib.workspace = true
gtk.workspace = true
gtk4-layer-shell.workspace = true
image.workspace = true
libc.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
zbus.workspace = true
toml.workspace = true
unixnotis-core = { path = "../unixnotis-core" }
unixnotis-ui = { path = "../unixnotis-ui" }
