[package]
name = "unixnotis-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
chrono.workspace = true
futures-util.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
zbus.workspace = true
toml.workspace = true
unixnotis-core = { path = "../unixnotis-core" }
indexmap.workspace = true
libc.workspace = true
